@startuml
class "RadialSelector : MonoBehaviour" as RadialSelector <<TowerContainer>> {
    # TowerContainer : TowerContainer <<get>>
    # Init(choices:IChoice[]) : void
    + UpdateButtons() : void
    # <<virtual>> OnChoiceClicked(choice:IChoice) : void
    + Show() : void
    + Hide() : void
    + IsOpen : bool <<get>>
}
interface IChoice {
    + Label : string <<get>>
    + Price : int <<get>>
    + Sprite : Sprite <<get>>
}
RadialSelector --> "TowerContainer" TowerContainer
RadialSelector ..> "IChoice" IChoice
@enduml
